bugfix z-index issue menu and snackbar

--- a/src/components/organisms/home/mobile/mobile-menu/mobile-menu.css
+++ b/src/components/organisms/home/mobile/mobile-menu/mobile-menu.css
@@ -5,7 +5,7 @@
     margin: 0px;
     width: 16rem;
     height: 100%;
-    z-index: 99999;
+    z-index: 1;
     position: absolute;
     top: 0;
     border-right: 1px solid #b4b4b4;
