--- a/src/index.css
+++ b/src/index.css
@@ -67,8 +67,8 @@ button {
     border: 1px solid #fff !important;
 }
 
-.div[class*='Snackbar_snackbar-wrapper'] {
-    z-index: 9999;
+[class*='Snackbar_snackbar'] {
+    z-index: 2 !important;
 }
 
 .overflow-hidden {
